--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,8 +17,11 @@ Metrics/AbcSize:
   Max: 30
 Metrics/ClassLength:
   Max: 150
+Metrics/ModuleLength:
+  Max: 150
 Metrics/BlockLength:
   ExcludedMethods: ['describe']
+  
 
 Style/Documentation:
   Enabled: false
